--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/drawer": "^7.7.4",
     "@react-navigation/elements": "^2.8.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.25",
