--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/drawer": "^7.7.4",
     "@react-navigation/elements": "^2.8.3",
