--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-picker/picker": "^2.11.4",
