--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-picker/picker": "^2.11.4",
+    "@react-native-picker/picker": "^2.11.1",
     "expo": "~54.0.25",
+    "expo-av": "^16.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-linking": "~8.0.9",
